<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <group android:id="@+id/top_sub">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_nav_home"
                android:title="@string/title_home" />
            <item
                android:id="@+id/nav_featured"
                android:icon="@drawable/ic_nav_featured"
                android:title="@string/title_nav_featured" />
            <item
                android:id="@+id/nav_commercial_guide"
                android:icon="@drawable/ic_store"
                android:title="@string/title_nav_commercial_guide" />
            <item
                android:id="@+id/nav_jobs_guide"
                android:icon="@drawable/ic_nav_jobs"
                android:title="@string/title_nav_jobs" />
            <item
                android:id="@+id/nav_favorites"
                android:icon="@drawable/ic_nav_fav"
                android:title="@string/title_nav_fav"
                android:fontFamily="@font/gorditas"
                app:actionLayout="@layout/menu_counter" />
<!--            <item-->
<!--                android:id="@+id/nav_all"-->
<!--                android:icon="@drawable/ic_nav_all"-->
<!--                android:title="@string/title_nav_all" />-->

            <item
                android:id="@+id/nav_search"
                android:icon="@drawable/ic_search"
                android:title="@string/title_nav_search" />
            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_nav_map"
                android:title="@string/title_nav_map" />

            <item
                android:id="@+id/nav_news"
                android:icon="@drawable/ic_nav_news"
                android:title="@string/title_nav_news" />

            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/title_activity_profile" />
        </group>

    </group>


    <group android:id="@+id/bottom_menu_drawer">
        <item
            android:id="@+id/nav_subscription"
            android:icon="@drawable/ic_open_register_form"
            android:title="@string/title_nav_subscription" />
        <item
            android:id="@+id/nav_suggestions"
            android:icon="@drawable/ic_suggestions"
            android:title="@string/title_nav_suggestions" />
        <item
            android:id="@+id/nav_get_in_touch"
            android:icon="@drawable/ic_info_web"
            android:title="@string/title_nav_get_in_touch" />
    </group>



    <group android:id="@+id/settings_menu_drawer">
        <item
            android:id="@+id/nav_rate_app"
            android:icon="@drawable/ic_subscription"
            android:title="@string/pref_title_rate" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_nav_setting"
            android:title="@string/activity_title_settings" />
    </group>

    <!--Tourist Destination-->
    <!--Food & Drink-->
    <!--Hotels-->
    <!--Entertainment-->
    <!--Sport-->
    <!--Shopping-->
    <!--Transportation-->
    <!--Religion-->
    <!--Public Services-->
    <!--Money-->

</menu>
